CLanguage/y.output
   0  $accept : translation_unit $end

   1  primary_expression : IDENTIFIER
   2                     | CONSTANT
   3                     | STRING_LITERAL
   4                     | '(' expression ')'

   5  postfix_expression : primary_expression
   6                     | postfix_expression '[' expression ']'
   7                     | postfix_expression '(' ')'
   8                     | postfix_expression '(' argument_expression_list ')'
   9                     | postfix_expression '.' IDENTIFIER
  10                     | postfix_expression PTR_OP IDENTIFIER
  11                     | postfix_expression INC_OP
  12                     | postfix_expression DEC_OP
  13                     | '(' type_name ')' '{' initializer_list '}'
  14                     | '(' type_name ')' '{' initializer_list ',' '}'

  15  argument_expression_list : assignment_expression
  16                           | argument_expression_list ',' assignment_expression

  17  unary_expression : postfix_expression
  18                   | INC_OP unary_expression
  19                   | DEC_OP unary_expression
  20                   | '&' cast_expression
  21                   | '*' cast_expression
  22                   | unary_operator cast_expression
  23                   | SIZEOF unary_expression
  24                   | SIZEOF '(' type_name ')'

  25  unary_operator : '+'
  26                 | '-'
  27                 | '~'
  28                 | '!'

  29  cast_expression : unary_expression
  30                  | '(' type_name ')' cast_expression

  31  multiplicative_expression : cast_expression
  32                            | multiplicative_expression '*' cast_expression
  33                            | multiplicative_expression '/' cast_expression
  34                            | multiplicative_expression '%' cast_expression

  35  additive_expression : multiplicative_expression
  36                      | additive_expression '+' multiplicative_expression
  37                      | additive_expression '-' multiplicative_expression

  38  shift_expression : additive_expression
  39                   | shift_expression LEFT_OP additive_expression
  40                   | shift_expression RIGHT_OP additive_expression

  41  relational_expression : shift_expression
  42                        | relational_expression '<' shift_expression
  43                        | relational_expression '>' shift_expression
  44                        | relational_expression LE_OP shift_expression
  45                        | relational_expression GE_OP shift_expression

  46  equality_expression : relational_expression
  47                      | equality_expression EQ_OP relational_expression
  48                      | equality_expression NE_OP relational_expression

  49  and_expression : equality_expression
  50                 | and_expression '&' equality_expression

  51  exclusive_or_expression : and_expression
  52                          | exclusive_or_expression '^' and_expression

  53  inclusive_or_expression : exclusive_or_expression
  54                          | inclusive_or_expression '|' exclusive_or_expression

  55  logical_and_expression : inclusive_or_expression
  56                         | logical_and_expression AND_OP inclusive_or_expression

  57  logical_or_expression : logical_and_expression
  58                        | logical_or_expression OR_OP logical_and_expression

  59  conditional_expression : logical_or_expression
  60                         | logical_or_expression '?' expression ':' conditional_expression

  61  assignment_expression : conditional_expression
  62                        | unary_expression assignment_operator assignment_expression

  63  assignment_operator : '='
  64                      | MUL_ASSIGN
  65                      | DIV_ASSIGN
  66                      | MOD_ASSIGN
  67                      | ADD_ASSIGN
  68                      | SUB_ASSIGN
  69                      | LEFT_ASSIGN
  70                      | RIGHT_ASSIGN
  71                      | AND_ASSIGN
  72                      | XOR_ASSIGN
  73                      | OR_ASSIGN

  74  expression : assignment_expression
  75             | expression ',' assignment_expression

  76  constant_expression : conditional_expression

  77  declaration : declaration_specifiers ';'
  78              | declaration_specifiers init_declarator_list ';'

  79  declaration_specifiers : storage_class_specifier
  80                         | storage_class_specifier declaration_specifiers
  81                         | type_specifier
  82                         | type_specifier declaration_specifiers
  83                         | type_qualifier
  84                         | type_qualifier declaration_specifiers
  85                         | function_specifier
  86                         | function_specifier declaration_specifiers

  87  init_declarator_list : init_declarator
  88                       | init_declarator_list ',' init_declarator

  89  init_declarator : declarator
  90                  | declarator '=' initializer

  91  storage_class_specifier : TYPEDEF
  92                          | EXTERN
  93                          | STATIC
  94                          | AUTO
  95                          | REGISTER

  96  type_specifier : VOID
  97                 | CHAR
  98                 | SHORT
  99                 | INT
 100                 | LONG
 101                 | FLOAT
 102                 | DOUBLE
 103                 | SIGNED
 104                 | UNSIGNED
 105                 | BOOL
 106                 | COMPLEX
 107                 | IMAGINARY
 108                 | struct_or_union_specifier
 109                 | enum_specifier
 110                 | TYPE_NAME

 111  struct_or_union_specifier : struct_or_union IDENTIFIER '{' struct_declaration_list '}'
 112                            | struct_or_union '{' struct_declaration_list '}'
 113                            | struct_or_union IDENTIFIER

 114  struct_or_union : STRUCT
 115                  | UNION

 116  struct_declaration_list : struct_declaration
 117                          | struct_declaration_list struct_declaration

 118  struct_declaration : specifier_qualifier_list struct_declarator_list ';'

 119  specifier_qualifier_list : type_specifier specifier_qualifier_list
 120                           | type_specifier
 121                           | type_qualifier specifier_qualifier_list
 122                           | type_qualifier

 123  struct_declarator_list : struct_declarator
 124                         | struct_declarator_list ',' struct_declarator

 125  struct_declarator : declarator
 126                    | ':' constant_expression
 127                    | declarator ':' constant_expression

 128  enum_specifier : ENUM '{' enumerator_list '}'
 129                 | ENUM IDENTIFIER '{' enumerator_list '}'
 130                 | ENUM '{' enumerator_list ',' '}'
 131                 | ENUM IDENTIFIER '{' enumerator_list ',' '}'
 132                 | ENUM IDENTIFIER

 133  enumerator_list : enumerator
 134                  | enumerator_list ',' enumerator

 135  enumerator : IDENTIFIER
 136             | IDENTIFIER '=' constant_expression

 137  function_specifier : INLINE

 138  declarator : pointer direct_declarator
 139             | direct_declarator

 140  direct_declarator : IDENTIFIER
 141                    | '(' declarator ')'
 142                    | direct_declarator '[' type_qualifier_list assignment_expression ']'
 143                    | direct_declarator '[' type_qualifier_list ']'
 144                    | direct_declarator '[' assignment_expression ']'
 145                    | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
 146                    | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
 147                    | direct_declarator '[' type_qualifier_list '*' ']'
 148                    | direct_declarator '[' '*' ']'
 149                    | direct_declarator '[' ']'
 150                    | direct_declarator '(' parameter_type_list ')'
 151                    | direct_declarator '(' identifier_list ')'
 152                    | direct_declarator '(' ')'

 153  pointer : '*'
 154          | '*' type_qualifier_list
 155          | '*' pointer
 156          | '*' type_qualifier_list pointer

 157  type_qualifier_list : type_qualifier
 158                      | type_qualifier_list type_qualifier

 159  type_qualifier : CONST
 160                 | RESTRICT
 161                 | VOLATILE

 162  parameter_type_list : parameter_list
 163                      | parameter_list ',' ELLIPSIS

 164  parameter_list : parameter_declaration
 165                 | parameter_list ',' parameter_declaration

 166  parameter_declaration : declaration_specifiers declarator
 167                        | declaration_specifiers abstract_declarator
 168                        | declaration_specifiers

 169  identifier_list : IDENTIFIER
 170                  | identifier_list ',' IDENTIFIER

 171  type_name : specifier_qualifier_list
 172            | specifier_qualifier_list abstract_declarator

 173  abstract_declarator : pointer
 174                      | direct_abstract_declarator
 175                      | pointer direct_abstract_declarator

 176  direct_abstract_declarator : '(' abstract_declarator ')'
 177                             | '[' ']'
 178                             | '[' assignment_expression ']'
 179                             | direct_abstract_declarator '[' ']'
 180                             | direct_abstract_declarator '[' assignment_expression ']'
 181                             | '[' '*' ']'
 182                             | direct_abstract_declarator '[' '*' ']'
 183                             | '(' ')'
 184                             | '(' parameter_type_list ')'
 185                             | direct_abstract_declarator '(' ')'
 186                             | direct_abstract_declarator '(' parameter_type_list ')'

 187  initializer : assignment_expression
 188              | '{' initializer_list '}'
 189              | '{' initializer_list ',' '}'

 190  initializer_list : initializer
 191                   | designation initializer
 192                   | initializer_list ',' initializer
 193                   | initializer_list ',' designation initializer

 194  designation : designator_list '='

 195  designator_list : designator
 196                  | designator_list designator

 197  designator : '[' constant_expression ']'
 198             | '.' IDENTIFIER

 199  statement : labeled_statement
 200            | compound_statement
 201            | expression_statement
 202            | selection_statement
 203            | iteration_statement
 204            | jump_statement

 205  labeled_statement : IDENTIFIER ':' statement
 206                    | CASE constant_expression ':' statement
 207                    | DEFAULT ':' statement

 208  $$1 :

 209  compound_statement : '{' $$1 '}'

 210  $$2 :

 211  compound_statement : '{' $$2 block_item_list '}'

 212  block_item_list : block_item
 213                  | block_item_list block_item

 214  block_item : declaration
 215             | statement

 216  expression_statement : ';'
 217                       | expression ';'

 218  selection_statement : IF '(' expression ')' statement
 219                      | IF '(' expression ')' statement ELSE statement
 220                      | SWITCH '(' expression ')' statement

 221  iteration_statement : WHILE '(' expression ')' statement
 222                      | DO statement WHILE '(' expression ')' ';'
 223                      | FOR '(' expression_statement expression_statement ')' statement
 224                      | FOR '(' expression_statement expression_statement expression ')' statement

 225  $$3 :

 226  iteration_statement : FOR '(' declaration expression_statement ')' $$3 statement

 227  $$4 :

 228  iteration_statement : FOR '(' declaration expression_statement expression ')' $$4 statement

 229  jump_statement : GOTO IDENTIFIER ';'
 230                 | CONTINUE ';'
 231                 | BREAK ';'
 232                 | RETURN ';'
 233                 | RETURN expression ';'

 234  translation_unit : external_declaration
 235                   | translation_unit external_declaration

 236  external_declaration : function_definition
 237                       | declaration

 238  function_definition : declaration_specifiers declarator declaration_list compound_statement
 239                      | declaration_specifiers declarator compound_statement

 240  declaration_list : declaration
 241                   | declaration_list declaration

state 0
	$accept : . translation_unit $end  (0)

	TYPE_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	.  error

	translation_unit  goto 26
	declaration  goto 27
	declaration_specifiers  goto 28
	storage_class_specifier  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 33
	enum_specifier  goto 34
	struct_or_union  goto 35
	external_declaration  goto 36
	function_definition  goto 37


state 1
	type_specifier : TYPE_NAME .  (110)

	.  reduce 110


state 2
	storage_class_specifier : TYPEDEF .  (91)

	.  reduce 91


state 3
	storage_class_specifier : EXTERN .  (92)

	.  reduce 92


state 4
	storage_class_specifier : STATIC .  (93)

	.  reduce 93


state 5
	storage_class_specifier : AUTO .  (94)

	.  reduce 94


state 6
	storage_class_specifier : REGISTER .  (95)

	.  reduce 95


state 7
	function_specifier : INLINE .  (137)

	.  reduce 137


state 8
	type_qualifier : RESTRICT .  (160)

	.  reduce 160


state 9
	type_specifier : CHAR .  (97)

	.  reduce 97


state 10
	type_specifier : SHORT .  (98)

	.  reduce 98


state 11
	type_specifier : INT .  (99)

	.  reduce 99


state 12
	type_specifier : LONG .  (100)

	.  reduce 100


state 13
	type_specifier : SIGNED .  (103)

	.  reduce 103


state 14
	type_specifier : UNSIGNED .  (104)

	.  reduce 104


state 15
	type_specifier : FLOAT .  (101)

	.  reduce 101


state 16
	type_specifier : DOUBLE .  (102)

	.  reduce 102


state 17
	type_qualifier : CONST .  (159)

	.  reduce 159


state 18
	type_qualifier : VOLATILE .  (161)

	.  reduce 161


state 19
	type_specifier : VOID .  (96)

	.  reduce 96


state 20
	type_specifier : BOOL .  (105)

	.  reduce 105


state 21
	type_specifier : COMPLEX .  (106)

	.  reduce 106


state 22
	type_specifier : IMAGINARY .  (107)

	.  reduce 107


state 23
	struct_or_union : STRUCT .  (114)

	.  reduce 114


state 24
	struct_or_union : UNION .  (115)

	.  reduce 115


state 25
	enum_specifier : ENUM . '{' enumerator_list '}'  (128)
	enum_specifier : ENUM . IDENTIFIER '{' enumerator_list '}'  (129)
	enum_specifier : ENUM . '{' enumerator_list ',' '}'  (130)
	enum_specifier : ENUM . IDENTIFIER '{' enumerator_list ',' '}'  (131)
	enum_specifier : ENUM . IDENTIFIER  (132)

	IDENTIFIER  shift 38
	'{'  shift 39
	.  error


state 26
	$accept : translation_unit . $end  (0)
	translation_unit : translation_unit . external_declaration  (235)

	$end  accept
	TYPE_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	.  error

	declaration  goto 27
	declaration_specifiers  goto 28
	storage_class_specifier  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 33
	enum_specifier  goto 34
	struct_or_union  goto 35
	external_declaration  goto 40
	function_definition  goto 37


state 27
	external_declaration : declaration .  (237)

	.  reduce 237


state 28
	declaration : declaration_specifiers . ';'  (77)
	declaration : declaration_specifiers . init_declarator_list ';'  (78)
	function_definition : declaration_specifiers . declarator declaration_list compound_statement  (238)
	function_definition : declaration_specifiers . declarator compound_statement  (239)

	IDENTIFIER  shift 41
	'('  shift 42
	'*'  shift 43
	';'  shift 44
	.  error

	init_declarator_list  goto 45
	init_declarator  goto 46
	declarator  goto 47
	pointer  goto 48
	direct_declarator  goto 49


state 29
	declaration_specifiers : storage_class_specifier .  (79)
	declaration_specifiers : storage_class_specifier . declaration_specifiers  (80)

	TYPE_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	IDENTIFIER  reduce 79
	'('  reduce 79
	')'  reduce 79
	'['  reduce 79
	','  reduce 79
	'*'  reduce 79
	';'  reduce 79

	declaration_specifiers  goto 50
	storage_class_specifier  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 33
	enum_specifier  goto 34
	struct_or_union  goto 35


state 30
	declaration_specifiers : type_specifier .  (81)
	declaration_specifiers : type_specifier . declaration_specifiers  (82)

	TYPE_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	IDENTIFIER  reduce 81
	'('  reduce 81
	')'  reduce 81
	'['  reduce 81
	','  reduce 81
	'*'  reduce 81
	';'  reduce 81

	declaration_specifiers  goto 51
	storage_class_specifier  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 33
	enum_specifier  goto 34
	struct_or_union  goto 35


state 31
	declaration_specifiers : type_qualifier .  (83)
	declaration_specifiers : type_qualifier . declaration_specifiers  (84)

	TYPE_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	IDENTIFIER  reduce 83
	'('  reduce 83
	')'  reduce 83
	'['  reduce 83
	','  reduce 83
	'*'  reduce 83
	';'  reduce 83

	declaration_specifiers  goto 52
	storage_class_specifier  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 33
	enum_specifier  goto 34
	struct_or_union  goto 35


state 32
	declaration_specifiers : function_specifier .  (85)
	declaration_specifiers : function_specifier . declaration_specifiers  (86)

	TYPE_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	IDENTIFIER  reduce 85
	'('  reduce 85
	')'  reduce 85
	'['  reduce 85
	','  reduce 85
	'*'  reduce 85
	';'  reduce 85

	declaration_specifiers  goto 53
	storage_class_specifier  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 33
	enum_specifier  goto 34
	struct_or_union  goto 35


state 33
	type_specifier : struct_or_union_specifier .  (108)

	.  reduce 108


state 34
	type_specifier : enum_specifier .  (109)

	.  reduce 109


state 35
	struct_or_union_specifier : struct_or_union . IDENTIFIER '{' struct_declaration_list '}'  (111)
	struct_or_union_specifier : struct_or_union . '{' struct_declaration_list '}'  (112)
	struct_or_union_specifier : struct_or_union . IDENTIFIER  (113)

	IDENTIFIER  shift 54
	'{'  shift 55
	.  error


state 36
	translation_unit : external_declaration .  (234)

	.  reduce 234


state 37
	external_declaration : function_definition .  (236)

	.  reduce 236


state 38
	enum_specifier : ENUM IDENTIFIER . '{' enumerator_list '}'  (129)
	enum_specifier : ENUM IDENTIFIER . '{' enumerator_list ',' '}'  (131)
	enum_specifier : ENUM IDENTIFIER .  (132)

	'{'  shift 56
	IDENTIFIER  reduce 132
	TYPE_NAME  reduce 132
	TYPEDEF  reduce 132
	EXTERN  reduce 132
	STATIC  reduce 132
	AUTO  reduce 132
	REGISTER  reduce 132
	INLINE  reduce 132
	RESTRICT  reduce 132
	CHAR  reduce 132
	SHORT  reduce 132
	INT  reduce 132
	LONG  reduce 132
	SIGNED  reduce 132
	UNSIGNED  reduce 132
	FLOAT  reduce 132
	DOUBLE  reduce 132
	CONST  reduce 132
	VOLATILE  reduce 132
	VOID  reduce 132
	BOOL  reduce 132
	COMPLEX  reduce 132
	IMAGINARY  reduce 132
	STRUCT  reduce 132
	UNION  reduce 132
	ENUM  reduce 132
	'('  reduce 132
	')'  reduce 132
	'['  reduce 132
	','  reduce 132
	'*'  reduce 132
	':'  reduce 132
	';'  reduce 132


state 39
	enum_specifier : ENUM '{' . enumerator_list '}'  (128)
	enum_specifier : ENUM '{' . enumerator_list ',' '}'  (130)

	IDENTIFIER  shift 57
	.  error

	enumerator_list  goto 58
	enumerator  goto 59


state 40
	translation_unit : translation_unit external_declaration .  (235)

	.  reduce 235


state 41
	direct_declarator : IDENTIFIER .  (140)

	.  reduce 140


state 42
	direct_declarator : '(' . declarator ')'  (141)

	IDENTIFIER  shift 41
	'('  shift 42
	'*'  shift 43
	.  error

	declarator  goto 60
	pointer  goto 48
	direct_declarator  goto 49


state 43
	pointer : '*' .  (153)
	pointer : '*' . type_qualifier_list  (154)
	pointer : '*' . pointer  (155)
	pointer : '*' . type_qualifier_list pointer  (156)

	RESTRICT  shift 8
	CONST  shift 17
	VOLATILE  shift 18
	'*'  shift 43
	IDENTIFIER  reduce 153
	'('  reduce 153
	')'  reduce 153
	'['  reduce 153
	','  reduce 153

	type_qualifier  goto 61
	pointer  goto 62
	type_qualifier_list  goto 63


state 44
	declaration : declaration_specifiers ';' .  (77)

	.  reduce 77


state 45
	declaration : declaration_specifiers init_declarator_list . ';'  (78)
	init_declarator_list : init_declarator_list . ',' init_declarator  (88)

	','  shift 64
	';'  shift 65
	.  error


state 46
	init_declarator_list : init_declarator .  (87)

	.  reduce 87


state 47
	init_declarator : declarator .  (89)
	init_declarator : declarator . '=' initializer  (90)
	function_definition : declaration_specifiers declarator . declaration_list compound_statement  (238)
	function_definition : declaration_specifiers declarator . compound_statement  (239)

	TYPE_NAME  shift 1
	TYPEDEF  shift 2
	EXTERN  shift 3
	STATIC  shift 4
	AUTO  shift 5
	REGISTER  shift 6
	INLINE  shift 7
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	'{'  shift 66
	'='  shift 67
	','  reduce 89
	';'  reduce 89

	declaration  goto 68
	declaration_specifiers  goto 69
	storage_class_specifier  goto 29
	type_specifier  goto 30
	type_qualifier  goto 31
	function_specifier  goto 32
	struct_or_union_specifier  goto 33
	enum_specifier  goto 34
	struct_or_union  goto 35
	compound_statement  goto 70
	declaration_list  goto 71


state 48
	declarator : pointer . direct_declarator  (138)

	IDENTIFIER  shift 41
	'('  shift 42
	.  error

	direct_declarator  goto 72


state 49
	declarator : direct_declarator .  (139)
	direct_declarator : direct_declarator . '[' type_qualifier_list assignment_expression ']'  (142)
	direct_declarator : direct_declarator . '[' type_qualifier_list ']'  (143)
	direct_declarator : direct_declarator . '[' assignment_expression ']'  (144)
	direct_declarator : direct_declarator . '[' STATIC type_qualifier_list assignment_expression ']'  (145)
	direct_declarator : direct_declarator . '[' type_qualifier_list STATIC assignment_expression ']'  (146)
	direct_declarator : direct_declarator . '[' type_qualifier_list '*' ']'  (147)
	direct_declarator : direct_declarator . '[' '*' ']'  (148)
	direct_declarator : direct_declarator . '[' ']'  (149)
	direct_declarator : direct_declarator . '(' parameter_type_list ')'  (150)
	direct_declarator : direct_declarator . '(' identifier_list ')'  (151)
	direct_declarator : direct_declarator . '(' ')'  (152)

	'('  shift 73
	'['  shift 74
	TYPE_NAME  reduce 139
	TYPEDEF  reduce 139
	EXTERN  reduce 139
	STATIC  reduce 139
	AUTO  reduce 139
	REGISTER  reduce 139
	INLINE  reduce 139
	RESTRICT  reduce 139
	CHAR  reduce 139
	SHORT  reduce 139
	INT  reduce 139
	LONG  reduce 139
	SIGNED  reduce 139
	UNSIGNED  reduce 139
	FLOAT  reduce 139
	DOUBLE  reduce 139
	CONST  reduce 139
	VOLATILE  reduce 139
	VOID  reduce 139
	BOOL  reduce 139
	COMPLEX  reduce 139
	IMAGINARY  reduce 139
	STRUCT  reduce 139
	UNION  reduce 139
	ENUM  reduce 139
	')'  reduce 139
	'{'  reduce 139
	','  reduce 139
	':'  reduce 139
	'='  reduce 139
	';'  reduce 139


state 50
	declaration_specifiers : storage_class_specifier declaration_specifiers .  (80)

	.  reduce 80


state 51
	declaration_specifiers : type_specifier declaration_specifiers .  (82)

	.  reduce 82


state 52
	declaration_specifiers : type_qualifier declaration_specifiers .  (84)

	.  reduce 84


state 53
	declaration_specifiers : function_specifier declaration_specifiers .  (86)

	.  reduce 86


state 54
	struct_or_union_specifier : struct_or_union IDENTIFIER . '{' struct_declaration_list '}'  (111)
	struct_or_union_specifier : struct_or_union IDENTIFIER .  (113)

	'{'  shift 75
	IDENTIFIER  reduce 113
	TYPE_NAME  reduce 113
	TYPEDEF  reduce 113
	EXTERN  reduce 113
	STATIC  reduce 113
	AUTO  reduce 113
	REGISTER  reduce 113
	INLINE  reduce 113
	RESTRICT  reduce 113
	CHAR  reduce 113
	SHORT  reduce 113
	INT  reduce 113
	LONG  reduce 113
	SIGNED  reduce 113
	UNSIGNED  reduce 113
	FLOAT  reduce 113
	DOUBLE  reduce 113
	CONST  reduce 113
	VOLATILE  reduce 113
	VOID  reduce 113
	BOOL  reduce 113
	COMPLEX  reduce 113
	IMAGINARY  reduce 113
	STRUCT  reduce 113
	UNION  reduce 113
	ENUM  reduce 113
	'('  reduce 113
	')'  reduce 113
	'['  reduce 113
	','  reduce 113
	'*'  reduce 113
	':'  reduce 113
	';'  reduce 113


state 55
	struct_or_union_specifier : struct_or_union '{' . struct_declaration_list '}'  (112)

	TYPE_NAME  shift 1
	RESTRICT  shift 8
	CHAR  shift 9
	SHORT  shift 10
	INT  shift 11
	LONG  shift 12
	SIGNED  shift 13
	UNSIGNED  shift 14
	FLOAT  shift 15
	DOUBLE  shift 16
	CONST  shift 17
	VOLATILE  shift 18
	VOID  shift 19
	BOOL  shift 20
	COMPLEX  shift 21
	IMAGINARY  shift 22
	STRUCT  shift 23
	UNION  shift 24
	ENUM  shift 25
	.  error

	type_specifier  goto 76
	type_qualifier  goto 77
	struct_or_union_specifier  goto 33
	enum_specifier  goto 34
	struct_or_union  goto 35
	struct_declaration_list  goto 78
	struct_declaration  goto 79
	specifier_qualifier_list  goto 80


state 56
	enum_specifier : ENUM IDENTIFIER '{' . enumerator_list '}'  (129)
	enum_specifier : ENUM IDENTIFIER '{' . enumerator_list ',' '}'  (131)

	IDENTIFIER  shift 57
	.  error

	enumerator_list  goto 81
	enumerator  goto 59


state 57
	enumerator : IDENTIFIER .  (135)
	enumerator : IDENTIFIER . '=' constant_expression  (136)

	'='  shift 82
	'}'  reduce 135
	','  reduce 135


state 58
	enum_specifier : ENUM '{' enumerator_list . '}'  (128)
	enum_specifier : ENUM '{' enumerator_list . ',' '}'  (130)
	enumerator_list : enumerator_list . ',' enumerator  (134)

	'}'  shift 83
	','  shift 84
	.  error


state 59
	enumerator_list : enumerator .  (133)

	.  reduce 133


state 60
	direct_declarator : '(' declarator . ')'  (141)

	')'  shift 85
	.  error


state 61
	type_qualifier_list : type_qualifier .  (157)

	.  reduce 157


state 62
	pointer : '*' pointer .  (155)

	.  reduce 155


state 63
	pointer : '*' type_qualifier_list .  (154)
	pointer : '*' type_qualifier_list . pointer  (156)
	type_qualifier_list : type_qualifier_list . type_qualifier  (158)

	RESTRICT  shift 8
	CONST  shift 17
	VOLATILE  shift 18
	'*'  shift 43
	IDENTIFIER  reduce 154
	'('  reduce 154
	')'  reduce 154
	'['  reduce 154
	','  reduce 154

	type_qualifier  goto 86
	pointer  goto 87


state 64
	init_declarator_list : init_declarator_list ',' . init_declarator  (88)

	IDENTIFIER  shift 41
	'('  shift 42
	'*'  shift 43
	.  error

	init_declarator  goto 88
	declarator  goto 89
	pointer  goto 48
	direct_declarator  goto 49


state 65
	declaration : declaration_specifiers init_declarator_list ';' .  (78)

	.  reduce 78


state 66
	compound_statement : '{' . $$1 '}'  (209)
	compound_statement : '{' . $$2 block_item_list '}'  (211)
	$$1 : .  (208)
	$$2 : .  (210)

	IDENTIFIER  reduce 210
	CONSTANT  reduce 210
	STRING_LITERAL  reduce 210
	SIZEOF  reduce 210
	INC_OP  reduce 210
	DEC_OP  reduce 210
	TYPE_NAME  reduce 210
	TYPEDEF  reduce 210
	EXTERN  reduce 210
	STATIC  reduce 210
	AUTO  reduce 210
	REGISTER  reduce 210
	INLINE  reduce 210
	RESTRICT  reduce 210
	CHAR  reduce 210
	SHORT  reduce 210
	INT  reduce 210
	LONG  reduce 210
	SIGNED  reduce 210
	UNSIGNED  reduce 210
	FLOAT  reduce 210
	DOUBLE  reduce 210
	CONST  reduce 210
	VOLATILE  reduce 210
	VOID  reduce 210
	BOOL  reduce 210
	COMPLEX  reduce 210
	IMAGINARY  reduce 210
	STRUCT  reduce 210
	UNION  reduce 210
	ENUM  reduce 210
	CASE  reduce 210
	DEFAULT  reduce 210
	IF  reduce 210
	SWITCH  reduce 210
	WHILE  reduce 210
	DO  reduce 210
	FOR  reduce 210
	GOTO  reduce 210
	CONTINUE  reduce 210
